app/assets/stylesheets/components/main.scss
main {
  background-color: $white;
  padding: 1em 0;

  #main-content {
    @extend %site-width-container;
  }

  strong {
    font-weight: bold;
  }

  h1 {
    @include heading-36;

    color: $hackney-green;
    font-weight: bold;
  }

  h2 {
    @include heading-24;

    font-weight: bold;
  }

  h3 {
    font-weight: bold;
  }

  ul {
    list-style-type: disc;
    padding-left: 20px;
  }

  .box-highlight {
    margin: 1em 0;
    padding: 2em 1em;
    color: $white;
    background-color: $hackney-green;
    text-align: center;
  }
}

